--- a/src/Dropzone.css
+++ b/src/Dropzone.css
@@ -1,6 +1,7 @@
 .Dropzone {
     display: block;
     border: 1px dashed gray;
+    width: 100%;
+    height: 100%;
     padding: 40px;
-    margin: 10px;
 }
