Added gaps for UNT, UNH and LIN.

--- a/src/EdiSegment.css
+++ b/src/EdiSegment.css
@@ -9,3 +9,15 @@
     padding: 4px;
     margin: 1px;
 }
+
+.EdiSegment__UNH {
+    margin-top: 10px;
+}
+
+.EdiSegment__UNT {
+    margin-bottom: 10px;
+}
+
+.EdiSegment__LIN {
+    margin-top: 10px;
+}
