Changed styling for component values.

--- a/src/EdiDataElement.css
+++ b/src/EdiDataElement.css
@@ -12,3 +12,7 @@
     padding: 0;
     margin: 1px;
 }
+
+.EdiDataElement.EdiDataElement__Composite > .EdiDataElement {
+    background-color: lightgreen;
+}
