--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
     padding: 40px;
+    margin-bottom: 20px;
 }
 
 .App__EdiFile {
@@ -7,4 +8,16 @@
     border-radius: 5px;
     border: 1px solid darkgray;
     padding: 20px;
+}
+
+.App__Version {
+    color: black;
+    padding: 2px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    display: block;
+    font-size: small;
+    font-weight: lighter;
+    background-color: white;
 }
