--- a/src/EdiDataElement.css
+++ b/src/EdiDataElement.css
@@ -4,7 +4,7 @@
     border-radius: 4px;
     border: 1px solid red;
     padding: 4px;
-    margin: 1px;
+    margin: 1px 3px;
 }
 
 .EdiDataElement.EdiDataElement__Composite {
